--- a/basic-react-app/src/product.css
+++ b/basic-react-app/src/product.css
@@ -1,6 +1,6 @@
 .Product {
-  border: 1px solid red;
-  border-radius: 24px;
+  border: 1px solid black;
+  border-radius: 15px;
   margin-bottom: 15px;
   padding: 0px 10px 0px 10px;
 }
