--- a/basic-react-app/src/product.css
+++ b/basic-react-app/src/product.css
@@ -3,4 +3,7 @@
   border-radius: 15px;
   margin-bottom: 15px;
   padding: 0px 10px 0px 10px;
+  margin-right: 15px;
+  height: 150px;
+  width: 200px;
 }
