--- a/portfolio-app/src/Home.css
+++ b/portfolio-app/src/Home.css
@@ -82,3 +82,14 @@
   font-size: 1.5rem;
   padding-bottom: 1rem;
 }
+
+@media screen and (max-width: 775px) {
+  #about {
+    flex-direction: column;
+  }
+  .myImg {
+    width: 300px;
+    margin: auto;
+    margin-top: 40px;
+  }
+}
