--- a/ws-class/src/App.css
+++ b/ws-class/src/App.css
@@ -1,4 +1,11 @@
-#root {
+.main {
+  margin: 50px auto;
+  width: 250px;
+  border: 2px solid black;
+  padding: 15px;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +46,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
