--- a/ws-class/src/App.css
+++ b/ws-class/src/App.css
@@ -5,6 +5,17 @@
   border: 2px solid black;
 }
 
+.caroImg {
+  margin-top: 10px;
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.navbar {
+  border-radius: 10px;
+}
+
 .img1 {
   height: 200px;
   width: 200px;
