--- a/ws-class-02/src/App.css
+++ b/ws-class-02/src/App.css
@@ -10,10 +10,33 @@ h1 {
 
 section {
   background-color: rgb(200, 200, 52);
-  height: 600px;
+  height: 700px;
   width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+}
+.card {
+  margin-left: 10px;
+  border: 2px solid black;
+  width: 250px;
+  height: max-content;
+  border-radius: 5px;
+}
+.card h2,
+h3 {
+  text-align: center;
 }
 
+img {
+  width: 100%;
+  height: 200px;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
