--- a/ws-class-06/src/Nav.css
+++ b/ws-class-06/src/Nav.css
@@ -1,3 +1,32 @@
 nav {
-  background-color: red;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  height: 90px;
+}
+nav h1 {
+  margin-left: 20px;
+  margin-top: 20px;
+  color: white;
+}
+
+.menu {
+  display: flex;
+  width: 700px;
+  height: 30px;
+  justify-content: space-between;
+  list-style: none;
+  margin-top: 35px;
+  margin-right: 70px;
+}
+
+.menu li {
+  color: white;
+  font-size: 20px;
+}
+
+.menu li:hover {
+  border-bottom: 3px solid red;
+
+  cursor: pointer;
 }
