--- a/blog_app_CRUD/src/App.css
+++ b/blog_app_CRUD/src/App.css
@@ -1,31 +1,67 @@
 .nav {
   display: flex;
-  height: 70px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
   background-color: black;
+  color: white;
 }
 
-.nav h1 {
-  color: white;
-  margin-top: 10px;
-  margin-left: 20px;
+.logo {
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .menu {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-left: 800px;
+  list-style: none;
 }
 
-.menu li {
+.menu.active {
+  display: block;
+}
+
+.nav-link {
+  margin: 0 15px;
+  text-decoration: none;
   color: white;
-  list-style: none;
-  margin: 20px;
-  font-size: 22px;
-  font-family: cursive;
+  font-size: 18px;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
   cursor: pointer;
 }
 
-.menu li:hover {
-  border-bottom: 2px solid red;
+.bar {
+  height: 4px;
+  width: 25px;
+  background-color: white;
+  margin: 3px 0;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    z-index: 1;
+  }
+
+  .menu.active {
+    display: flex;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .nav-link {
+    padding: 10px;
+  }
 }
